# scau_oj

./: .gitignore  1009 圆柱体的表面积.c  1011-最小差值.c  1015 计算摄氏温度值.c  1024-阶乘.c  11129.c  11152-搬砖问题.cpp  1153-找面积最大的三角形.c  18049-迭代法求平方根.c  18383-身份证编码.c  2025笔试题库.c  CMakeLists.txt  README.md  main.c
High_Level_Programming/: README.md  main.c  user.c
High_Level_Programming/admin/: login.c  login.h
High_Level_Programming/database/: belong.c  belong.h  link.c  store.c  store.h  tlv.c  tlv.h
High_Level_Programming/interact/: interact.c
High_Level_Programming/system/: system.c  system.h
High_Level_Programming/utils/: crypto.c  crypto.h
PREx/4/: 18042 计算分段函数值.c  18043-找出3个数中最大的数.c  18045-前一个字符和后一个字符.c
PREx/6/: 1051-找矩阵中的鞍点.c  1145-回文串.c
TextBook/3/: 18073-分期还款.c
TextBook/4/: 18045-前一个字符和后一个字符.c
TextBook/5/: 18047-水仙花数.c  18048-自由落体.c  18049-迭代法求平方根.c
TextBook/6/: 1051-找矩阵中的鞍点.c  1145-回文串.c  (+1 more)
data structure/: README.md
data_structure/: 19080.cpp  8580.cpp  readme.md
exp10/: 1091-[填空]交换两数，由大到小输出.c  1092-[填空]函数实现求字符串长度.c  11128-字符串与指针.c
exp12/: 1105-[填空]文本文件操作_字符读入.c  1106-文本文件操作_字符写入.c  11129-文本文件操作_读取与选择显示.c  case1.in
exp4/: 1007-判断整数是否为完全平方数.c  1016-字符变换.c  1017-求数的位数.c  1018-数的排序.c  1019-数的整除.c  1020-正负奇偶判断.c
exp4 select-structure/: 1008-计算成绩平均分.c
exp5/: 1008-计算成绩平均分.c  1017-求数的位数.c  1029-求最大公约数.c  1031-统计单词个数.c  1035-打印菱形.c  1042-百万富翁.c  1049-求各位数和.c
exp6/: 1028-求素数.c  1137-找满足要求的数字.c
exp8/: 18058-一年的第几天.c
exp9/: 1124-函数中的变量.c
high-level-programming/: .ninja_deps  .ninja_log  CMakeCache.txt  README.md  build.bat  data  main.c  password
(+135 files in other folders)
