cmake_minimum_required(VERSION 4.1)
project(scau_oj2 C)

set(CMAKE_C_STANDARD 99)

add_executable(scau_oj2 main.c
        18049-迭代法求平方根.c
        main.c
        main.c
        main.c
        exp5/1035-打印菱形.c
        1153-找面积最大的三角形.c
        11129.c
        18045-前一个字符和后一个字符.c
        11152-搬砖问题.cpp
        1011-最小差值.cpp
        18383-身份证编码.c
        2025笔试题库.c
        "1009 圆柱体的表面积.c"
        "1015 计算摄氏温度值.c"
        "18042 计算分段函数值.c"
        18054-输出不同的数.c
        "exp4 select-structure/1018-数的排序.cpp"
        "exp4 select-structure/1016-字符变换.cpp"
        "exp4 select-structure/1019-数的整除.cpp"
        "exp4 select-structure/1020-正负奇偶判断.cpp"
        "exp4 select-structure/1007-判断整数是否为完全平方数.cpp"
        "exp4 select-structure/1017-求数的位数.cpp"
        "1024-阶乘.cpp"
        "exp4 select-structure/1008-计算成绩平均分.cpp"
        exp5/1008-计算成绩平均分.c
        exp5/1017-求数的位数.c
        exp5/1029-求最大公约数.c
        exp5/1049-求各位数和.c
        exp5/1042-百万富翁.c
        exp5/1031-统计单词个数.c
)
